--- a/package.json
+++ b/package.json
@@ -12,9 +12,27 @@
   "dependencies": {
     "@aws-sdk/client-cloudwatch-logs": "^3.651.1",
     "@aws-sdk/client-codepipeline": "^3.658.1",
+    "@next-auth/mongodb-adapter": "^1.1.3",
+    "@radix-ui/react-avatar": "^1.1.1",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.2",
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.7",
+    "bcrypt": "^5.1.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.460.0",
+    "mongodb": "^6.11.0",
+    "mongoose": "^8.8.2",
     "next": "14.2.11",
+    "next-auth": "^4.24.10",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.53.2",
+    "tailwind-merge": "^2.5.5",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
